objects/Job__c.object
<CustomObject>
    <description>Job Details</description>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Desired_Skills__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Desired Skills</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Employment_Type__c</fullName>
        <label>Employment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full  time</fullName>
                </value>
                <value>
                    <fullName>Parttime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Publish__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Job Publish</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Job_Stage__c</fullName>
        <label>Job Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Job Title</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMD1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LMD1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LMD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LMD</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOJ__c</fullName>
        <label>MOJ</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Global_PL_1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>dram1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>dram1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>perminenttype__c</fullName>
        <defaultValue>false</defaultValue>
        <label>perminenttype</label>
        <type>Checkbox</type>
    </fields>
    <label>Job</label>
    <listViews>
        <fullName>All_records</fullName>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Q1_Job</fullName>
        <filterScope>Queue</filterScope>
        <label>Q1</label>
        <queue>Q1</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <recordTypes>
        <fullName>Permanant</fullName>
        <active>true</active>
        <label>Permanant</label>
    </recordTypes>
    <recordTypes>
        <fullName>RT1</fullName>
        <active>true</active>
        <label>RT1</label>
    </recordTypes>
    <recordTypes>
        <fullName>RT2</fullName>
        <active>true</active>
        <label>RT2</label>
    </recordTypes>
    <recordTypes>
        <fullName>temporary</fullName>
        <active>true</active>
        <label>temporary</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>